--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,6 @@
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="18" />
-
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
@@ -24,10 +23,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FinalSubmission"
         tools:targetApi="31">
+        <activity
+            android:name=".view.welcome.WelcomeActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="API KEY" />
+            android:value="AIzaSyCW0kpPFTICucwv_Ufl33zjsqjCHA60v7A" />
 
         <activity
             android:name=".view.maps.MapsActivity"
@@ -58,7 +64,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".view.welcome.WelcomeActivity"
+            android:name=".view.splash.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
